--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href=".css" rel="stylesheet">
+  <title>Great Pyramid of Giza</title>
+  <link href="css/main.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
-
+  <section class="info">
+    <div>
+      <img src="images/pyramid-giza.jpg" alt="">
+    </div>
+  </section>
+  <section class="para">
+    <div>
+      <h2><strong>Great pyramid of Giza</strong></h2>
+      <p>The Great Pyramid of Giza (also known as the Pyramid of Khufu or the Pyramid of Cheops) is the oldest and largest of the three pyramids in the Giza pyramid complex bordering what is now El Giza, Egypt. It is the oldest of the Seven Wonders of the Ancient World, and the only one to remain largely intact</p>
+      <a href="">Visit Khufu</a>
+    </div>
+  </section>
 </body>
 </html>
